force-app/main/default/objects/JBCXM__JobTracker__c/JBCXM__JobTracker__c.object-meta.xml
<CustomObject>
    <label>JobTracker</label>
    <nameField>
        <label>Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>JobTrackers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>