force-app/main/default/objects/JBCXM__JobTracker__c/fields/JBCXM__AsyncJobId__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__AsyncJobId__c</fullName>
    <description>denotes AsyncApexJob .Referred from AsyncApexJob</description>
    <label>AsyncJobId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>