force-app/main/default/objects/JBCXM__JobTracker__c/fields/JBCXM__CompletionDate__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__CompletionDate__c</fullName>
    <description>time a which this job is completed.</description>
    <label>CompletionDate</label>
    <type>DateTime</type>
</CustomField>