force-app/main/default/objects/JBCXM__JobTracker__c/fields/JBCXM__FailureReason__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__FailureReason__c</fullName>
    <description>Reason for failure</description>
    <label>FailureReason</label>
    <type>TextArea</type>
</CustomField>