force-app/main/default/objects/JBCXM__JobTracker__c/fields/JBCXM__Failures__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Failures__c</fullName>
    <description>denotes number of failures out of all submitted jobs.</description>
    <label>Failures</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>