force-app/main/default/objects/JBCXM__JobTracker__c/fields/JBCXM__JobType__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__JobType__c</fullName>
    <description>Type of the job submitted by user</description>
    <label>JobType</label>
    <length>100</length>
    <type>Text</type>
</CustomField>