force-app/main/default/objects/JBCXM__JobTracker__c/fields/JBCXM__Period__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Period__c</fullName>
    <description>Date for which aggregation was run</description>
    <label>Period</label>
    <type>Date</type>
</CustomField>