force-app/main/default/objects/JBCXM__JobTracker__c/fields/JBCXM__Processed__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Processed__c</fullName>
    <label>Processed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>