force-app/main/default/objects/JBCXM__JobTracker__c/fields/JBCXM__Title__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Title__c</fullName>
    <description>Title of the submitted job</description>
    <label>Title</label>
    <length>200</length>
    <type>Text</type>
</CustomField>