force-app/main/default/objects/JBCXM__JobTracker__c/fields/JBCXM__TotalBatches__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__TotalBatches__c</fullName>
    <description>denotes number of batches submitted for this job.</description>
    <label>TotalBatches</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>